test/negative/202_if_no_else.fx
// expect: else
val a = if true {1}
println(a)
